Fixing Gordo's enrage and fixing boss cast bar overlap

--- a/css/app.less
+++ b/css/app.less
@@ -4,7 +4,7 @@ body {
     line-height: 1.3em;
     margin: 0;
     padding: 0;
-    background: black;
+    background: rgb(78, 67, 57);
 
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -15,9 +15,33 @@ body {
 }
 
 .outer {
-    background: rgb(78, 67, 57);
     padding: 20px;
     min-width: 300px;
+}
+
+.bottom {
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    width: calc(~"100% - 40px");
+}
+
+.game-actions {
+    float: right;
+    margin: 5px;
+
+    div {
+        background: #333;
+        padding: 3px;
+        width: 60px;
+        text-align: center;
+        font-size: 0.8em;
+        .white-text-with-background();
+    }
+
+    div:active {
+        background: #000;
+    }
 }
 
 .boss {
